@@ -8,7 +8,7 @@
  * redistribution of this file, and for a DISCLAIMER OF ALL
  * WARRANTIES.
  * 
- * RCS: @(#) $Id: PutsCmd.java,v 1.1.1.1 1998/10/14 21:09:20 cvsadmin Exp $
+ * RCS: @(#) $Id: PutsCmd.java,v 1.2 2000/11/19 17:17:17 krischan Exp $
  *
  */
 
@@ -79,11 +79,6 @@ class PutsCmd implements Command {
 	if (chan == null) {
 	    throw new TclException(interp, "can not find channel named \""
                     + channelId + "\"");
-	}
-
-	if ((chan.getMode() & TclIO.RDONLY) != 0) {
-	    throw new TclException(interp, "channel \"" + channelId
-		    + "\" wasn't opened for writing");
 	}
 
 	try { 
